# local-app-test

./: .gitignore  .gitmodules  README.md  package.json  pnpm-lock.yaml  vite.config.ts
docs/: local-code-agent-frontend-tech-spec.md  local-code-agent-implementation-plan.md  local-code-agent-jobworkerp-integration.md  local-code-agent-service-prd.md
project.inlang/: settings.json
src/: index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: agent.rs  connection.rs  issues.rs  jobs.rs  mcp.rs  mod.rs  pulls.rs  repositories.rs  settings.rs
src-tauri/src/crypto/: mod.rs  token.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  models.rs  queries.rs
src-tauri/src/db/migrations/: V1__initial.sql  V2__dynamic_mode.sql
src-tauri/src/grpc/: client.rs  mod.rs
src/components/: ExternalLink.tsx
src/components/agent/: RunAgentDialog.tsx
src/components/layout/: header.tsx  sidebar.tsx
src/hooks/: index.ts  use-job-status.ts  use-job-stream.ts  use-mcp.ts  use-repository.ts  use-settings.ts
src/lib/query/: index.ts  keys.ts  queries.ts
src/lib/tauri/: commands.ts  events.ts  index.ts
src/messages/: en.json  ja.json
src/routes/: __root.tsx  index.tsx  repositories.tsx  settings.tsx
src/routes/jobs/: $jobId.tsx  index.tsx
src/routes/repositories/: $repoId.tsx
src/routes/repositories/$repoId/: issues.tsx  pulls.tsx
src/routes/repositories/$repoId/issues/: $issueNumber.tsx  index.tsx
src/types/: models.ts
workflows/: code-agent-workflow.yaml
