[workspace]
# Independent workspace - not part of parent jobworkerp-rs workspace

[package]
name = "local-code-agent"
version = "0.1.0"
description = "Local Code Agent Service - A coding agent for GitHub/Gitea issues"
authors = ["you"]
edition = "2021"

[lib]
name = "local_code_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
