[workspace]
# Independent workspace - not part of parent jobworkerp-rs workspace

[package]
name = "local-code-agent"
version = "0.1.0"
description = "Local Code Agent Service - A coding agent for GitHub/Gitea issues"
authors = ["you"]
edition = "2021"

[lib]
name = "local_code_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

# gRPC client
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# Encryption
aes-gcm = "0.10"
rand = "0.9"
keyring = "3"
hex = "0.4"

# Utilities
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
directories = "5"
