[workspace]
# Independent workspace - not part of parent jobworkerp-rs workspace

[package]
name = "local-code-agent"
version = "0.1.0"
description = "Local Code Agent Service - A coding agent for GitHub/Gitea issues"
authors = ["you"]
edition = "2021"

[lib]
name = "local_code_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# jobworkerp client (includes proto types and helper functions)
jobworkerp-client = { git = "https://github.com/jobworkerp-rs/jobworkerp-client-rs.git", default-features = false }
command-utils = { git = "https://github.com/sutr-app/command-utils.git" }

# gRPC/Protobuf (same version as jobworkerp-client)
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
refinery = { version = "0.8", features = ["rusqlite"] }

# Encryption
aes-gcm = "0.10"
rand = "0.9"
hex = "0.4"

# Utilities
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
async-trait = "0.1"
directories = "5"
regex = "1"
url = "2"

# Platform-specific keyring with native credential store
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

# Mobile platforms use mock store (tokens stored in encrypted SQLite instead)
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
keyring = "3"

[dev-dependencies]
tempfile = "3.24.0"
